Fix direct link spacing

--- a/src/style/_elements.headings-direct-link.less
+++ b/src/style/_elements.headings-direct-link.less
@@ -5,12 +5,9 @@
   color: #ffffff;
   text-decoration: none;
 
-  font-size: var(--font-size-s);
   font-weight: var(--font-weight-normal);
 
-  float: right;
-  padding-top: 0.22em;
-  padding-left: 0.5em;
+  margin-left: 0.25em;
 }
 
 :hover > .direct-link {
